# Project-Eva

./: .env.example  .gitignore  README.md  config.yaml  pyproject.toml  requirements.txt
docs/: PROJECT_PLAN.md  architecture.md
eva/: __init__.py  __main__.py  cli.py  companion.py
eva/core/: brain.py  eva_core.py  personality.py
eva/memory/: __init__.py  deep_memory.py  vector_store.py
eva/skills/: __init__.py  api_integration.py  calendar_integration.py  crypto_tracker.py  emotional.py  emotional_intelligence.py  github_integration.py  health_tracker.py  interest_engine.py  network_monitor.py  proactive.py  proactive_scheduler.py  system.py  system_monitor.py  task_automation.py  telegram_bot.py  web_search.py
eva/vision/: __init__.py  game_analyzer.py  game_detector.py  screen.py
eva/voice/: __init__.py  stt.py  tts.py
